# FourChannelAdapter

./: CMakeLists.txt  ClassFactory.cpp  FourChannelAdapter.cpp  FourChannelAdapter.h  FourChannelAdapter.xmi  FourChannelAdapterClass.cpp  FourChannelAdapterClass.h  FourChannelAdapterStateMachine.cpp  MotorClass.cpp  MotorClass.h  README.md  SerialPort.cpp  SerialPort.h  main.cpp
